Added producer edit.